# forge

./: .gitignore  .gitmodules  .mcp.json  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md
.claude/agents/: planner.md  qa.md  reviewer.md  rust-implementer.md  spec-oracle.md
.claude/commands/: work-next-issue.md
.github/: CODEOWNERS
.github/workflows/: CLA.yml
crates/harpoon/: Cargo.toml
crates/harpoon/src/: lib.rs
crates/harpoon_diagnostics/: Cargo.toml
crates/harpoon_diagnostics/src/: diagnostic.rs  render.rs  span.rs
crates/harpoon_hir/: Cargo.toml
crates/harpoon_hir/src/: stdlib.rs  types.rs
crates/harpoon_intern/: Cargo.toml
crates/harpoon_intern/src/: symbol.rs
crates/harpoon_resolve/: Cargo.toml
crates/harpoon_resolve/src/: lib.rs  resolve.rs  scope.rs
crates/harpoon_serial_json/: Cargo.toml
crates/harpoon_serial_json/src/: serialize.rs
crates/harpoon_typeck/: Cargo.toml
crates/harpoon_typeck/src/: check.rs  lib.rs
crates/harpoon_validate/: Cargo.toml
crates/harpoon_validate/src/: validate.rs
crates/kermlc/: Cargo.toml
crates/kermlc/src/: lib.rs  main.rs  pipeline.rs
crates/kermlc/tests/: integration.rs
crates/kermlc/tests/fixtures/invalid/: chain_bad_member.kerml  missing_brace.kerml  multiplicity_unresolved_ref.kerml  unresolved_type.kerml
crates/kermlc/tests/fixtures/valid/: conjugation.kerml  conjugation_chained.kerml  direction.kerml  feature_chain.kerml  imports.kerml  inline_conjugation.kerml  multiplicity_feature_ref.kerml  simple_package.kerml  specialization.kerml  visibility.kerml
crates/kermlc_ast/: Cargo.toml
crates/kermlc_ast/src/: nodes.rs
crates/kermlc_diagnostics/: Cargo.toml
crates/kermlc_diagnostics/src/: diagnostic.rs  lib.rs  render.rs  source_map.rs
crates/kermlc_hir/: Cargo.toml
crates/kermlc_hir/src/: lib.rs  lower.rs  stdlib.rs  types.rs
crates/kermlc_intern/src/: arena.rs  lib.rs
crates/kermlc_lexer/: Cargo.toml
crates/kermlc_lexer/src/: lexer.rs  token.rs
crates/kermlc_lower/: Cargo.toml
crates/kermlc_lower/src/: lib.rs
crates/kermlc_parser/: Cargo.toml
crates/kermlc_parser/src/: parser.rs
crates/kermlc_resolve/: Cargo.toml
crates/kermlc_resolve/src/: lib.rs  resolve.rs  scope.rs
crates/kermlc_serial_json/: Cargo.toml
crates/kermlc_serial_json/src/: lib.rs  serialize.rs
crates/kermlc_typeck/: Cargo.toml
crates/kermlc_typeck/src/: check.rs
crates/kermlc_validate/: Cargo.toml
crates/kermlc_validate/src/: lib.rs  validate.rs
docs/adr/: 0001-two-frontends-one-kernel-engine.md  0002-in-memory-model-primary-artifact.md
docs/plans/: 2026-02-15-kermlc-compiler-design.md  2026-03-10-a1-full-conjugation-impl.md  2026-03-11-a1c-inline-conjugated-type-refs.md  2026-03-11-a2-expression-evaluation-design.md  2026-03-28-a3-feature-chaining-design.md  2026-03-28-a3-feature-chaining-impl.md  2026-03-28-diamond-inheritance-redefinition-design.md  2026-03-28-visibility-membership-impl.md  2026-06-23-harpoon-architecture-cleanup.md  2026-06-24-spec-pdf-to-markdown.md  2026-06-25-issue-driven-agent-team-design.md  2026-06-25-issue-driven-agent-team-impl.md  progress.md
docs/spec/: 1-Kernel_Modeling_Language.md  README.md  abstract-syntax-diagrams.md
docs/spec/1-Kernel_Modeling_Language/: 1-Kernel_Modeling_Language.md  1-Kernel_Modeling_Language_meta.json
docs/spec/2a-OMG_Systems_Modeling_Language/: 2a-OMG_Systems_Modeling_Language.md  2a-OMG_Systems_Modeling_Language_meta.json
docs/spec/2b-SysML_v1_to_v2_Transformation/: 2b-SysML_v1_to_v2_Transformation.md  2b-SysML_v1_to_v2_Transformation_meta.json
docs/spec/3-Systems_Modeling_API_and_Services/: 3-Systems_Modeling_API_and_Services.md  3-Systems_Modeling_API_and_Services_meta.json
docs/superpowers/specs/: 2026-06-25-issue-driven-agent-team-design.md
signatures/: cla.json
tests/fixtures/invalid/: unresolved_type.kerml
tests/fixtures/valid/: simple_package.kerml
tools/spec-mcp/: Cargo.toml
tools/spec-mcp/src/: bnf.rs  clause_tree.rs  implementation.rs  index.rs  lib.rs  main.rs  tools.rs
tools/spec-mcp/tests/: bnf_tests.rs  clause_tree_tests.rs  implementation_tests.rs  index_tests.rs  tools_tests.rs
