[workspace]
resolver = "2"
members = [
    "crates/kermlc",
    "crates/harpoon_intern",
    "crates/harpoon_diagnostics",
    "crates/kermlc_ast",
    "crates/kermlc_lexer",
    "crates/kermlc_parser",
    "crates/harpoon_hir",
    "crates/kermlc_lower",
    "crates/harpoon_resolve",
    "crates/harpoon_typeck",
    "crates/harpoon_validate",
    "crates/harpoon_serial_json",
    "crates/harpoon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
harpoon_intern = { path = "crates/harpoon_intern" }
harpoon_diagnostics = { path = "crates/harpoon_diagnostics" }
kermlc_ast = { path = "crates/kermlc_ast" }
kermlc_lexer = { path = "crates/kermlc_lexer" }
kermlc_parser = { path = "crates/kermlc_parser" }
harpoon_hir = { path = "crates/harpoon_hir" }
kermlc_lower = { path = "crates/kermlc_lower" }
harpoon_resolve = { path = "crates/harpoon_resolve" }
harpoon_typeck = { path = "crates/harpoon_typeck" }
harpoon_validate = { path = "crates/harpoon_validate" }
harpoon_serial_json = { path = "crates/harpoon_serial_json" }
harpoon = { path = "crates/harpoon" }
