[package]
name = "harpoon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
harpoon_intern = { workspace = true }
harpoon_diagnostics = { workspace = true }
harpoon_hir = { workspace = true }
harpoon_resolve = { workspace = true }
harpoon_typeck = { workspace = true }
harpoon_validate = { workspace = true }
harpoon_serial_json = { workspace = true }
