[package]
name = "kermlc"
version.workspace = true
edition.workspace = true

[dependencies]
kermlc_intern = { workspace = true }
kermlc_diagnostics = { workspace = true }
kermlc_lexer = { workspace = true }
kermlc_parser = { workspace = true }
kermlc_hir = { workspace = true }
kermlc_resolve = { workspace = true }
kermlc_typeck = { workspace = true }
kermlc_validate = { workspace = true }
kermlc_serial_json = { workspace = true }
