[package]
name = "kermlc"
version.workspace = true
edition.workspace = true

[dependencies]
kermlc_intern = { workspace = true }
kermlc_diagnostics = { workspace = true }
kermlc_parser = { workspace = true }
kermlc_hir = { workspace = true }
kermlc_lower = { workspace = true }
kermlc_serial_json = { workspace = true }
harpoon = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
