[package]
name = "kermlc"
version.workspace = true
edition.workspace = true

[dependencies]
harpoon_intern = { workspace = true }
harpoon_diagnostics = { workspace = true }
kermlc_parser = { workspace = true }
harpoon_hir = { workspace = true }
kermlc_lower = { workspace = true }
harpoon_serial_json = { workspace = true }
harpoon = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
