[package]
name = "kermlc_lower"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
harpoon_intern = { workspace = true }
harpoon_diagnostics = { workspace = true }
kermlc_ast = { workspace = true }
kermlc_parser = { workspace = true }
harpoon_hir = { workspace = true }
