[package]
name = "kermlc_serial_json"
version.workspace = true
edition.workspace = true

[dependencies]
kermlc_intern = { workspace = true }
kermlc_hir = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
kermlc_diagnostics = { workspace = true }
kermlc_lower = { workspace = true }
kermlc_parser = { workspace = true }
kermlc_resolve = { workspace = true }
kermlc_typeck = { workspace = true }
