[package]
name = "kermlc_typeck"
version.workspace = true
edition.workspace = true

[dependencies]
kermlc_intern = { workspace = true }
kermlc_diagnostics = { workspace = true }
kermlc_hir = { workspace = true }

[dev-dependencies]
kermlc_lower = { workspace = true }
kermlc_parser = { workspace = true }
kermlc_resolve = { workspace = true }
