[package]
name = "spec-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[dependencies]
rmcp = { version = "1.8.0", features = ["server", "macros"] }
tree-sitter-md = { version = "0.5.3", features = ["parser"] }
tree-sitter = "0.26.9"
tokio = { version = "1.52.3", features = ["io-util", "io-std", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"
anyhow = "1.0.102"
regex = "1.12.4"

[lib]
name = "spec_mcp"
path = "src/lib.rs"

[[bin]]
name = "spec-mcp"
path = "src/main.rs"